--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,11 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: 깃-들다 (pick-git) # add your name
 author-img: mark.jpg # add your photo
-about-author: 깃-들다 기술 블로그입니다. 😇💪 | This is a tech blog for pick-git. 😇💪 | 这是 pick-git 科技博客. 😇💪 | ここは、ピクギトの技術のblogです。😇💪 # add description
+about-author: | # add description
+  깃-들다 기술 블로그입니다. 😇💪
+  This is a tech blog for pick-git.
+  ここは、ピクギトの技術のblogです。
+  这是 pick-git 科技博客.
 # social-twitter: # add your Twitter handle
 # social-facebook: # add your Facebook handle
 social-github: 2021-pick-git # add your Github handle
