refactor: about-author 개행 추가.

--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: 깃-들다 (pick-git) # add your name
 author-img: mark.jpg # add your photo
-about-author: | # add description
-  깃-들다 기술 블로그입니다. 😇💪
-  This is a tech blog for pick-git.
-  ここは、ピクギトの技術のblogです。
-  这是 pick-git 科技博客.
+about-author:  # add description
+  깃-들다 기술 블로그입니다.</br>
+  This is a tech blog for pick-git.</br>
+  ピクギトの技術のblogです。</br>
+  这是 pick-git 科技博客.</br>
 # social-twitter: # add your Twitter handle
 # social-facebook: # add your Facebook handle
 social-github: 2021-pick-git # add your Github handle
