refactor: about-author 이모지 위치 수정.

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 author: 깃-들다 (pick-git) # add your name
 author-img: mark.jpg # add your photo
 about-author:  # add description
-  깃-들다 기술 블로그입니다. 😇💪</br>
+  깃-들다 기술 블로그입니다.</br>😇💪</br>
   This is a tech blog for pick-git.</br>
   ピクギトの技術のblogです。</br>
   这是 pick-git 科技博客.</br>
