chore: github url 변경

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ about-author:  # add description
   这是 pick-git 科技博客.</br>
 # social-twitter: # add your Twitter handle
 # social-facebook: # add your Facebook handle
-social-github: 2021-pick-git # add your Github handle
+social-github: woowacourse-teams/2021-pick-git # add your Github handle
 # social-linkedin: # add your Linkedin handle
 # social-email: # add your Email address
 
